# timp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.h
.github/workflows/: doxygen.yml
client/: networkclient.cpp  networkclient.h
crypto/: sha256.cpp  sha256.h  tripledes.cpp  tripledes.h
docs/doxygen/: Doxyfile
docs/wiki/: API-Protocol.md  Architecture.md  Home.md
html/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_my_tcp_server-members.html  class_my_tcp_server.html  class_my_tcp_server.js  class_network_client-members.html  class_network_client.html  class_network_client.js  class_triple_d_e_s-members.html  class_triple_d_e_s.html  class_triple_d_e_s.js  classes.html  database_8cpp.html  database_8cpp_source.html  database_8h.html  database_8h_source.html  dir_296d53ceaeaa7e099814a6def439fe8a.html  dir_296d53ceaeaa7e099814a6def439fe8a.js  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_41e1742e44e2de38b3bc91f993fed282.js  dir_53403d93963d3f5d2fcffd0698f5bddb.html  dir_53403d93963d3f5d2fcffd0698f5bddb.js  dir_db3a54907829b36871118d03417739cd.html  dir_db3a54907829b36871118d03417739cd.js  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  gradientdescent_8cpp.html  gradientdescent_8cpp.js  gradientdescent_8cpp_source.html  gradientdescent_8h.html  gradientdescent_8h.js  (+44 more)
html/html/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_18.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_3.js  classes_4.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  (+15 more)
math/: gradientdescent.cpp  gradientdescent.h  spline.cpp  spline.h
server/: database.cpp  main_server.cpp  requesthandler.cpp
